@@ -27,7 +27,7 @@
 static const Convenience convenience[] = { \
     /*  class     desktop follow */
     { "Thunar",       2,    1 },
-    { "Firefox",      3,    0 },
+    { "Firefox",      3,    1 },
     { "Links",        3,    1 },
     { "MPlayer",      4,    1 },
     { "Thunderbird",  5,    0 },
